# deepl-fastapi-playwright

./: .env.example  .pnp.cjs  README.md  curl-test.sh  package.json  pyproject.toml  quick-test-server.py  run-server.py  start-server.py
.github/workflows/: routine-tests.yml
.husky/: pre-commit
deepl_fastapi_pw/: __init__.py  __main__.py  __main__.py-  deepl_server.py  deepl_server.py-  deepl_server_async.py  deepl_tr.py  get_pwbrowser.py  run_uvicorn.py  run_uvicorn_async.py
tests/: 2022-07-09.txt  test_deepl_fastapi_pw.py  test_deepl_server.py  test_longtext.py
