[tool.poetry]
name = "deepl-fastapi-pw"
version = "0.1.0a6"
description = "deepl via fastapi using playwright"
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/deepl-fastapi-playwright"

[tool.poetry.dependencies]
python = "^3.8.3"
logzero = "^1.6.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
# portalocker = "^2.2.1"
# nest-asyncio = "^1.5.1"
# get-ppbrowser = "^0.1.3"
# deepl-scraper-pw = "^0.1.2"
# requests = "^2.25.1"
pyquery = "^1.4.3"
portalocker = "^2.7.0"
playwright = "^1.32.1"
about-time = "^4.2.1"
nest-asyncio = "^1.5.6"
python-dotenv = "^1.0.0"
get-pwbrowser = "^0.1.1"
get-pwbrowser-sync = "^0.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"

[tool.poetry.scripts]
deepl-fastapi-pw = "deepl_fastapi_pw.run_uvicorn:main"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
pyperclip = "^1.8.2"
ruff = "^0.0.283"
pyright = "^1.1.321"
pytest = "^6.2.5"
flake8 = "^6.1.0"
micropipenv = "^1.5.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"
